fix(grid): material filter menu wrong font-weight

--- a/packages/material/scss/grid/_layout.scss
+++ b/packages/material/scss/grid/_layout.scss
@@ -52,6 +52,10 @@ $grid-group-drag-clue-opacity: .9 !default;
 
         th {
             font-weight: 700;
+
+            .k-grid-filter {
+                font-weight: normal;
+            }
         }
 
         .k-grid-filter {
